--- a/drupal.ant.properties
+++ b/drupal.ant.properties
@@ -1,3 +1,4 @@
-drupal.version.number = 1.0.1
-drupal.package.name = ${project.name}-drupal-${drupal.version.number}.zip
+drupal.version.number = 1.0.2
+drupal.package.name = ${project.name}-drupal-${drupal.version.number}
 drupal.dir = ${src.dir}/drupal
+drupal.output.dir = ${build.dir}/output/${drupal.package.name}
