Reorganised RDFa module to help YUI Doc.
Fixes issue 19.

--HG--
rename : rdfa/_unit-tests/ut-kb.js => kb/_unit-tests/ut-kb.js
rename : kb/kb.js => kb/src/main.js
rename : rdfa/RDFGraph.js => rdfa/src/RDFGraph.js
rename : rdfa/RDFParser.js => rdfa/src/RDFParser.js
rename : rdfa/RDFQuery.js => rdfa/src/RDFQuery.js
rename : rdfa/RDFStore.js => rdfa/src/RDFStore.js
rename : rdfa/fresnel.js => rdfa/src/fresnel.js
rename : rdfa/metascan.js => rdfa/src/main.js

--- a/build.xml
+++ b/build.xml
@@ -176,6 +176,16 @@
 		<copy file="${tools.dir}/tests/unit.html" tofile="${deploy.root.dir}/unit-tests/backplane/main.html" failonerror="true" />
 
 		<!--
+			Knowledgebase
+		-->
+		<concat destfile="${deploy.root.dir}/unit-tests/kb/unit-tests.js" force="no" eol="crlf">
+			<fileset dir="kb/_unit-tests">
+				<include name="**/*.js" />
+			</fileset>
+		</concat>
+		<copy file="${tools.dir}/tests/unit.html" tofile="${deploy.root.dir}/unit-tests/kb/main.html" failonerror="true" />
+
+		<!--
 			RDFa
 		-->
 		<concat destfile="${deploy.root.dir}/unit-tests/rdfa/unit-tests.js" force="no" eol="crlf">
