--- a/ant.properties
+++ b/ant.properties
@@ -1,6 +1,8 @@
 product.name = backplane
 project.name = backplanejs
+project.url = http://backplanejs.googlecode.com
 version.number = 0.6.3
+yui.version = 2.8.0
 dist.package.name = ${project.name}-${version.number}
 deploy.package.name = ${project.name}-${version.number}.zip
 
@@ -8,5 +10,8 @@ build.dir = build
 output.dir = ${build.dir}/output/${dist.package.name}
 deploy.root.dir = deploy
 deploy.dir = ${deploy.root.dir}/${dist.package.name}
-src.dir = .
+doc.dir = ${deploy.root.dir}/docs
 tools.dir = tools
+
+src.dir = .
+rdfa.src.dir = ${src.dir}/rdfa/src
