--- a/tools/GoogleAppEngine/app.yaml
+++ b/tools/GoogleAppEngine/app.yaml
@@ -14,6 +14,9 @@ handlers:
   upload: backplanejs-(.*)/(.*)
   expiration: 1825d
 
+- url: /docs
+  static_dir: docs
+
 - url: /samples
   static_dir: samples
 
