--- a/ant.properties
+++ b/ant.properties
@@ -5,6 +5,7 @@ version.number = 0.6.3
 yui.version = 2.8.0
 dist.package.name = ${project.name}-${version.number}
 deploy.package.name = ${project.name}-${version.number}.zip
+runtime.js.path = /${dist.package.name}/${product.name}-min.js
 
 build.dir = build
 output.dir = ${build.dir}/output/${dist.package.name}
@@ -12,6 +13,8 @@ deploy.root.dir = deploy
 deploy.dir = ${deploy.root.dir}/${dist.package.name}
 doc.dir = ${deploy.root.dir}/docs
 tools.dir = tools
+
+third-party.dir = third-party
 
 src.dir = .
 rdfa.src.dir = ${src.dir}/rdfa/src
