Added support for unit-test driving from Ant.
Fixes issue 35.
Fixes issue 36.

--- a/ant.properties
+++ b/ant.properties
@@ -13,6 +13,7 @@ deploy.root.dir = deploy
 deploy.dir = ${deploy.root.dir}/${dist.package.name}
 doc.dir = ${deploy.root.dir}/docs
 tools.dir = tools
+reports.dir = ${build.dir}/output/${dist.package.name}/reports
 
 third-party.dir = third-party
 
