--- a/ant.properties
+++ b/ant.properties
@@ -19,3 +19,8 @@ third-party.dir = third-party
 
 src.dir = .
 rdfa.src.dir = ${src.dir}/rdfa/src
+
+selenium.rc.port = 4444
+selenium.rc.host = localhost
+gae.port = 8080
+gae.host = localhost
