Ant tasks are now callable from other modules.
Fixes issue 37.

--- a/ant.properties
+++ b/ant.properties
@@ -7,17 +7,17 @@ dist.package.name = ${project.name}-${version.number}
 deploy.package.name = ${project.name}-${version.number}.zip
 runtime.js.path = /${dist.package.name}/${product.name}-min.js
 
-build.dir = build
+build.dir = ${basedir}/build
 output.dir = ${build.dir}/output/${dist.package.name}
-deploy.root.dir = deploy
+deploy.root.dir = ${basedir}/deploy
 deploy.dir = ${deploy.root.dir}/${dist.package.name}
 doc.dir = ${deploy.root.dir}/docs
-tools.dir = tools
+tools.dir = ${basedir}/tools
 reports.dir = ${build.dir}/output/${dist.package.name}/reports
 
 third-party.dir = third-party
 
-src.dir = .
+src.dir = ${basedir}
 rdfa.src.dir = ${src.dir}/rdfa/src
 
 selenium.rc.port = 4444
